Spacing Issues - and Mobile version messed up after tablet edit. DONE FINAL FINITO.

--- a/css/index.css
+++ b/css/index.css
@@ -108,9 +108,10 @@ h1 {
 
 @media (max-width: 500px){
 	.logo {
-		margin: 5px 5px 10px;
-		top: 0;
-	
+		display: flex;
+		position: relative;
+		order:-1;
+		left: 0;
 	}
 
 	.navigation {
@@ -119,7 +120,6 @@ h1 {
 		width: auto;
 		height: auto;
 		position: static;
-		padding-top: 48px;
 		padding-bottom: 10px;	
 	}
 
